--- a/nested_stacks/container_repo/containers/fluent-bit/fluent-bit.conf
+++ b/nested_stacks/container_repo/containers/fluent-bit/fluent-bit.conf
@@ -1,5 +1,5 @@
 [SERVICE]
-    Flush 1
+    Flush 5
     Log_Level info
     storage.path /tmp/
     storage.backlog.mem_limit 5M
@@ -11,7 +11,7 @@
 
 [OUTPUT]
     Name kinesis
-    Match twitter.realtime
+    Match twitter.stream
     region ${AWS_DEFAULT_REGION}
     stream ${DELIVERY_STREAM_NAME}
     partition_key id_str
